Added tests, Readme and the Dockerfile